--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-publici-app",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A generator for single-page apps and embeddable graphics from the Center for Public Integrity's news dev team.",
   "license": "MIT",
   "main": "app/index.js",
@@ -14,8 +14,9 @@
     "generators"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
+    "underscore.string": "^3.1.1",
+    "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   }
 }
