--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "underscore.string": "^3.1.1",
     "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
+  },
+  "jshintConfig": {
+    "esnext": true
   }
 }
