--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,8 @@
 {
-
+    "name": "{{ name }}",
+    "version": "0.1.0",
+    "description": "{{ description }}",
+    "author": "{{ author }}",
     "private": true,
     "scripts": {
         "dev": "backpack dev",
