--- a/template/package.json
+++ b/template/package.json
@@ -13,10 +13,16 @@
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
     },
     "dependencies": {
+        "@nuxtjs/axios": "^4.5.0",
+        "@nuxtjs/google-analytics": "^2.0.2",
         "axios": "^0.16.2",
         "cross-env": "^5.0.1",
         "express": "^4.15.3",
-        "nuxt": "^1.0.0-rc7",
+        "gulp": "^3.9.1",
+        "gulp-awspublish": "^3.3.0",
+        "gulp-rename": "^1.2.2",
+        "nuxt": "^1.0.0-rc11",
+        "pym.js": "^1.3.1",
         "source-map-support": "^0.4.15"
     },
     "devDependencies": {
