--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,8 @@
         "generate": "nuxt generate",
         "start": "cross-env NODE_ENV=production node build/main.js",
         "precommit": "yarn lint",
-        "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+        "heroku-postbuild": "npm run build"
     },
     "dependencies": {
         "@nuxtjs/axios": "^4.5.0",
