--- a/template/package.json
+++ b/template/package.json
@@ -19,9 +19,6 @@
         "axios": "^0.16.2",
         "cross-env": "^5.0.1",
         "express": "^4.15.3",
-        "gulp": "4.0.0",
-        "gulp-awspublish": "^3.3.0",
-        "gulp-rename": "^1.2.2",
         "nuxt": "^1.4.0",
         "pym.js": "^1.3.2",
         "source-map-support": "^0.4.15"
@@ -36,6 +33,9 @@
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-node": "^5.1.1",
         "eslint-plugin-promise": "^3.5.0",
-        "eslint-plugin-standard": "^3.0.1"
+        "eslint-plugin-standard": "^3.0.1",
+        "gulp": "4.0.0",
+        "gulp-awspublish": "^3.3.0",
+        "gulp-rename": "^1.2.2"
     }
 }
