--- a/template/package.json
+++ b/template/package.json
@@ -5,8 +5,8 @@
     "author": "{{ author }}",
     "private": true,
     "scripts": {
-        "dev": "backpack dev",
-        "build": "nuxt build && backpack build",
+        "dev": "nuxt",
+        "build": "nuxt build",
         "generate": "nuxt generate",
         "start": "cross-env NODE_ENV=production node build/main.js",
         "precommit": "yarn lint",
@@ -18,14 +18,12 @@
         "@nuxtjs/google-analytics": "^2.0.2",
         "axios": "^0.16.2",
         "cross-env": "^5.0.1",
-        "express": "^4.15.3",
         "nuxt": "^1.4.0",
         "pym.js": "^1.3.2",
         "source-map-support": "^0.4.15"
     },
     "devDependencies": {
         "babel-eslint": "^7.2.3",
-        "backpack-core": "^0.4.1",
         "eslint": "^4.3.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-loader": "^1.9.0",
@@ -34,7 +32,7 @@
         "eslint-plugin-node": "^5.1.1",
         "eslint-plugin-promise": "^3.5.0",
         "eslint-plugin-standard": "^3.0.1",
-        "gulp": "4.0.0",
+        "gulp": "^4.0.0",
         "gulp-awspublish": "^3.3.0",
         "gulp-rename": "^1.2.2"
     }
