--- a/template/package.json
+++ b/template/package.json
@@ -18,6 +18,7 @@
         "@nuxtjs/google-analytics": "^2.0.2",
         "axios": "^0.16.2",
         "cross-env": "^5.0.1",
+        "express": "^4.16.3",
         "nuxt": "^1.4.0",
         "pym.js": "^1.3.2",
         "source-map-support": "^0.4.15"
