--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,4 @@
 {
-    "name": "{{ name }}",
-    "version": "0.1.0",
-    "description": "{{ description }}",
-    "author": "{{ author }}",
     "private": true,
     "scripts": {
         "build": "nuxt build",
@@ -11,7 +7,7 @@
         "heroku-postbuild": "npm run build",
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
         "precommit": "yarn lint",
-        "push": "gulp push",
+        "push": "s3-deploy './dist/**' --cwd './dist/' --bucket apps.publicintegrity.org --gzip --filePrefix $npm_package_name --cache 120",
         "start": "cross-env NODE_ENV=production node build/main.js"
     },
     "dependencies": {
@@ -33,9 +29,6 @@
         "eslint-plugin-node": "^5.1.1",
         "eslint-plugin-promise": "^3.5.0",
         "eslint-plugin-standard": "^3.0.1",
-        "gulp": "^4.0.0",
-        "gulp-awspublish": "^3.3.0",
-        "gulp-cli": "^2.0.1",
-        "gulp-rename": "^1.2.2"
+        "s3-deploy": "^1.1.0"
     }
 }
