--- a/template/package.json
+++ b/template/package.json
@@ -12,7 +12,7 @@
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
         "precommit": "yarn lint",
         "push": "gulp push",
-        "start": "cross-env NODE_ENV=production node build/main.js"
+        "start": "nuxt start"
     },
     "dependencies": {
         "@nuxtjs/axios": "^4.5.0",
