--- a/template/package.json
+++ b/template/package.json
@@ -17,6 +17,8 @@
     "dependencies": {
         "@nuxtjs/axios": "^4.5.0",
         "@nuxtjs/google-analytics": "^2.0.2",
+        "dsv-loader": "^2.0.0",
+        "less-loader": "^4.1.0",
         "nuxt": "^1.4.0",
         "pym.js": "^1.3.2",
         "source-map-support": "^0.4.15"
