Try to escape the Slack template in .drone.yml

--- a/template/.drone.yml
+++ b/template/.drone.yml
@@ -51,8 +51,17 @@ pipeline:
     image: plugins/slack
     secrets: [ slack_webhook ]
     template: >
+    {{{{raw}}}}
       {{#success build.status}}
+    {{{{/raw}}}}
+    {{{{raw}}}}
         published https://{{host}}/{{name}}/
+    {{{{/raw}}}}
+    {{{{raw}}}}
       {{else}}
+    {{{{/raw}}}}
+    {{{{raw}}}}
         failed publishing https://{{host}}/{{name}}/
+    {{{{raw}}}}
       {{/success}}
+    {{{{/raw}}}}
