--- a/.drone.yml
+++ b/.drone.yml
@@ -28,10 +28,11 @@ pipeline:
       - yarn config set cache-folder .yarn-cache
       - yarn install --pure-lockfile
 
-  build:
+  generate:
     image: node:8.12.0-alpine
     commands:
-      - yarn build
+      - cd test
+      - yarn generate
 
   # rebuild-cache:
   #   image: plugins/s3-cache:1
