--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,7 @@
         "generate": "nuxt generate",
         "heroku-postbuild": "npm run build",
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-        "precommit": "yarn lint",
+        "precommit": "npm run lint",
         "push": "s3-deploy './dist/**' --cwd './dist/' --bucket {{host}} --gzip --filePrefix $npm_package_name --cache 120",
         "start": "nuxt start"
     },
@@ -20,8 +20,9 @@
         "dsv-loader": "^2.0.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
-        "nuxt": "^2.2.0",
+        "nuxt": "^2.3.1",
         "pym.js": "^1.3.2",
+        "s3-deploy": "^1.1.4",
         "source-map-support": "^0.5.9"
     },
     "devDependencies": {
@@ -29,11 +30,10 @@
         "eslint": "^5.7.0",
         "eslint-config-standard": "^12.0.0",
         "eslint-loader": "^2.1.1",
-        "eslint-plugin-html": "^4.0.6",
+        "eslint-plugin-html": "^5.0.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-node": "^8.0.0",
         "eslint-plugin-promise": "^4.0.1",
-        "eslint-plugin-standard": "^4.0.0",
-        "s3-deploy": "^1.1.4"
+        "eslint-plugin-standard": "^4.0.0"
     }
 }
