Try to trigger Slack notification even on Drone build failure

--- a/template/.drone.yml
+++ b/template/.drone.yml
@@ -50,6 +50,8 @@ pipeline:
   slack:
     image: plugins/slack
     secrets: [ slack_webhook ]
+    when:
+      status: [ success, failure ]
     template: >
     {{{{raw}}}}
       {{#success build.status}}
