--- a/.drone.yml
+++ b/.drone.yml
@@ -57,4 +57,5 @@ pipeline:
     image: plugins/slack
     secrets: [ slack_webhook ]
     when:
+      status: [ success, failure ]
       event: [push, tag, deployment]
