--- a/.drone.yml
+++ b/.drone.yml
@@ -14,24 +14,27 @@ pipeline:
     commands:
       - npm ci
 
+  test:
+    image: node:8.12.0-alpine
+    commands:
+      - npm test
+
   scaffold:
     image: node:8.12.0-alpine
     commands:
-      - apk add expect
-      - chmod +x scaffold.sh
-      - ./scaffold.sh
+      - npm run sao --yes . testing
 
   install-deps:
     image: node:8.12.0-alpine
     commands:
-      - cd test
+      - cd testing
       - npm config set cache .npm-cache
       - npm ci --production
 
   generate:
     image: node:8.12.0-alpine
     commands:
-      - cd test
+      - cd testing
       - npm run generate
 
   # rebuild-cache:
