--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ pipeline:
   scaffold:
     image: node:8.12.0-alpine
     commands:
-      - npm run sao --yes . testing
+      - npm run sao -- -y . testing
 
   install-deps:
     image: node:8.12.0-alpine
