--- a/template/package.json
+++ b/template/package.json
@@ -9,7 +9,7 @@
         "build": "nuxt build",
         "dev": "nuxt",
         "generate": "nuxt generate",
-        "github-setup": "curl https://api.github.com/orgs/PublicI/repos -d '{\"name\":\"$npm_package_name\",\"private\":true}' && git remote add origin https://github.com/PublicI/$npm_package_name.git",
+        "github-setup": "echo 'GitHub user name: \\c' && read user && curl -u $user https://api.github.com/orgs/PublicI/repos -d '{\"name\":\"'$npm_package_name'\",\"private\":true}' && git remote add origin 'https://github.com/PublicI/'$npm_package_name'.git'",
         "heroku-postbuild": "npm run build",
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
         "precommit": "npm run lint",
