--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "It sets things up real good so you don't have to worry about it none.",
   "author": "Center for Public Integrity <data@publicintegrity.org> (http://publicintegrity.org)",
   "license": "GPL-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PublicI/app-generator.git"
+  },
   "bin": {
     "publici-app-generator": "index.js"
   },
