--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@publici/app-generator",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0",
   "description": "It sets things up real good so you don't have to worry about it none.",
   "author": "Center for Public Integrity <data@publicintegrity.org> (http://publicintegrity.org)",
   "license": "GPL-2.0",
