--- a/template/.github/workflows/push.yml
+++ b/template/.github/workflows/push.yml
@@ -1,28 +1,25 @@
 on: push
-name: Test
+name: Publish
 jobs:
   install:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: install
-      uses: docker://node:14.5-alpine
+      uses: docker://node:14.8-alpine
       with:
         entrypoint: npm
-        args: ci
-    - name: test
-      uses: docker://node:14.5-alpine
-      with:
-        entrypoint: npm
-        args: test
-    - name: scaffold
-      uses: docker://node:14.5-alpine
-      with:
-        entrypoint: node
-        args: index -y testing
+        args: ci --production
     - name: generate
-      uses: docker://node:14.5-alpine
-      working-directory: ./testing
+      uses: docker://node:14.8-alpine
       with:
         entrypoint: npm
         args: run generate
+    - name: push
+      uses: docker://node:14.8-alpine
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      with:
+        entrypoint: npm
+        args: run push
