--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,28 +1,20 @@
 on: push
 name: Test
 jobs:
-  install:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: Set Node.js 14.x
+      uses: actions/setup-node@master
+      with:
+        node-version: 14.x
     - name: install
-      uses: docker://node:14.8-alpine
-      with:
-        entrypoint: npm
-        args: ci
+      run: npm ci
     - name: test
-      uses: docker://node:14.8-alpine
-      with:
-        entrypoint: npm
-        args: test
+      run: npm test
     - name: scaffold
-      uses: docker://node:14.8-alpine
-      with:
-        entrypoint: node
-        args: index -y testing
+      run: node index -y testing
     - name: generate
-      uses: docker://node:14.8-alpine
       working-directory: ./testing
-      with:
-        entrypoint: npm
-        args: run generate
+      run: npm run generate
