--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
-  "name": "@publici/app-generator",
-  "version": "1.4.0",
-  "description": "It sets things up real good so you don't have to worry about it none.",
-  "author": "Center for Public Integrity <data@publicintegrity.org> (http://publicintegrity.org)",
-  "license": "GPL-2.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/PublicI/app-generator.git"
-  },
-  "bin": {
-    "publici-app-generator": "index.js"
-  },
-  "scripts": {
-    "test": "ava"
-  },
-  "dependencies": {
-    "cac": "^6.5.8",
-    "sao": "^1.7.0"
-  },
-  "devDependencies": {
-    "ava": "^3.5.1"
-  }
+    "name": "<%= name %>",
+    "version": "0.1.0",
+    "description": "<%= description %>",
+    "author": "<%= author %>",
+    "private": true,
+    "scripts": {
+        "aws-push": "aws s3 sync --acl public-read --cache-control max-age=120,public ./dist/ s3://<%= host %>/$npm_package_name/",
+        "build": "nuxt build",
+        "dev": "nuxt",
+        "generate": "nuxt generate",
+        "github-setup": "echo 'GitHub user name: \\c' && read user && curl -u $user https://api.github.com/orgs/PublicI/repos -d '{\"name\":\"'$npm_package_name'\",\"private\":true}' && git remote add origin 'https://github.com/PublicI/'$npm_package_name'.git'",
+        "heroku-postbuild": "npm run build",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+        "precommit": "npm run lint",
+        "push": "s3-deploy './dist/**' --cwd './dist/' --bucket <%= host %> --gzip --filePrefix $npm_package_name --cache 120",
+        "start": "nuxt start"
+    },
+    "dependencies": {
+        "@nuxtjs/axios": "^5.12.2",
+        "@nuxtjs/google-analytics": "^2.2.3",
+        "less": "^3.11.1",
+        "less-loader": "^7.0.1",
+        "nuxt": "^2.14.4",
+        "pym.js": "^1.3.2",
+        "s3-deploy": "^1.4.0",
+        "source-map-support": "^0.5.16"
+    },
+    "devDependencies": {
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.8.1",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-loader": "^4.0.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.1",
+        "eslint-plugin-vue": "^7.0.0"
+    }
 }
