Try to only run actions when the repo isn't app-generator

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,6 +3,7 @@ name: Publish
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: github.event.repository.name != 'app-generator'
     steps:
     - uses: actions/checkout@master
     - name: Set Node.js 14.x
