--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,6 +2,7 @@ on: push
 name: Publish
 jobs:
   publish:
+    if: github.event.repository.name != 'nuxt-template'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -9,15 +10,11 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 14.x
-    - name: scaffold
-      if: github.event.repository.name == 'app-generator'
-      run: npx sao -y .
     - name: install
       run: npm ci
     - name: generate
       run: npm run generate
     - name: push
-      if: github.event.repository.name != 'app-generator'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
